<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.detail.DetailMovieActivity">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="Video Detail"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/img_poster_detail"
        android:layout_width="250dp"
        android:layout_height="290dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/contentDescriptionImage"
        android:scaleType="fitXY"
        android:src="@drawable/poster_aquaman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:riv_corner_radius="4dp" />

    <TextView
        android:id="@+id/tv_title_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Title"
        android:textAlignment="center"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_poster_detail" />

    <TextView
        android:id="@+id/tv_gendre_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="gendre"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gendre_detail">

        <TextView
            android:id="@+id/tv_year_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="year"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/dot" />

        <TextView
            android:id="@+id/tv_duration_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="duration"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rating_detail"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/contentDescriptionRating"
            android:numStars="5"
            android:stepSize="0.1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/tv_desc_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="asdasdasfasdasdasf afasfg sag safg s g af ga fh ga fh afg asdg ad ga sdg as dg asdga sdg s da"
            android:textAlignment="center"
            android:textSize="14sp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>