<resources>
    <string name="app_name">Movie Catalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="movie">Movie</string>
    <string name="tvshow">Tv Shows</string>
    <string name="contentDescriptionImage">"https://image.tmdb.org"</string>
    <string name="contentDescriptionRating">5</string>
</resources>